Minor code updates to the SimpleFileSystemModel, removed setHierarchicalColumn as it was removed from the final version of the TreeTableModel.
git-svn-id: https://svn.java.net/svn/swingx~svn/trunk@2303 1312f61e-266d-0410-97fa-c3b71232c9ac